{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 11,
  "lineage": "dd2017bb-b68e-7b45-37a4-d4b199a3dde0",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-020f3e705cfa4b904",
            "domain": "vpc",
            "id": "eipalloc-020f3e705cfa4b904",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-170-176-126.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.170.176.126",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prod-nat"
            },
            "tags_all": {
              "Name": "prod-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:383752243342:internet-gateway/igw-05b50a92043e6eaab",
            "id": "igw-05b50a92043e6eaab",
            "owner_id": "383752243342",
            "tags": {
              "Name": "prod-igw"
            },
            "tags_all": {
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-0e59c3afdfd5d22a3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-020f3e705cfa4b904",
            "association_id": "eipassoc-056eafe6683b925fb",
            "connectivity_type": "public",
            "id": "nat-01a15a2754f888080",
            "network_interface_id": "eni-0005535de19bc8250",
            "private_ip": "10.1.2.118",
            "public_ip": "18.170.176.126",
            "subnet_id": "subnet-0e166cf5ea5e0ccc4",
            "tags": {
              "Name": "prod-nat"
            },
            "tags_all": {
              "Name": "prod-nat"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:383752243342:route-table/rtb-01ff160793b761b8d",
            "id": "rtb-01ff160793b761b8d",
            "owner_id": "383752243342",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01a15a2754f888080",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-private"
            },
            "tags_all": {
              "Name": "prod-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e59c3afdfd5d22a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:383752243342:route-table/rtb-05ea476d01ada98b1",
            "id": "rtb-05ea476d01ada98b1",
            "owner_id": "383752243342",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05b50a92043e6eaab",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-public"
            },
            "tags_all": {
              "Name": "prod-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e59c3afdfd5d22a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc0d17c127dde762",
            "route_table_id": "rtb-01ff160793b761b8d",
            "subnet_id": "subnet-01e233d9ae5c898e8"
          },
          "dependencies": [
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2a51be251524862",
            "route_table_id": "rtb-05ea476d01ada98b1",
            "subnet_id": "subnet-0e166cf5ea5e0ccc4"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:383752243342:subnet/subnet-01e233d9ae5c898e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e233d9ae5c898e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "383752243342",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-private-eu-west-2a",
              "Owner": "John"
            },
            "tags_all": {
              "Name": "prod-private-eu-west-2a",
              "Owner": "John"
            },
            "vpc_id": "vpc-0e59c3afdfd5d22a3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:383752243342:subnet/subnet-0e166cf5ea5e0ccc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e166cf5ea5e0ccc4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "383752243342",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-public-eu-west-2a",
              "Owner": "John"
            },
            "tags_all": {
              "Name": "prod-public-eu-west-2a",
              "Owner": "John"
            },
            "vpc_id": "vpc-0e59c3afdfd5d22a3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:383752243342:vpc/vpc-0e59c3afdfd5d22a3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0349b75e684662b11",
            "default_route_table_id": "rtb-015441379729b50dd",
            "default_security_group_id": "sg-0b6a338cb03223cb0",
            "dhcp_options_id": "dopt-05b2aba337f46f413",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e59c3afdfd5d22a3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-015441379729b50dd",
            "owner_id": "383752243342",
            "tags": {
              "Name": "prod-main"
            },
            "tags_all": {
              "Name": "prod-main"
            }
          }
        }
      ]
    }
  ]
}